fix nav spacing & remove nav link at mobile size

--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,10 @@ footer {
                         "nav nav nav";
     justify-content: space-between;
     width: 100%;
-    border-bottom: 1.5px solid rgb(70, 70, 70, 0.15);
+    /* border-bottom: 1.5px solid rgb(70, 70, 70, 0.15); */
     background-color: rgb(255, 255, 255);
     grid-gap: 1px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .logo {
@@ -98,7 +99,6 @@ nav {
 .nav ul {
     display: flex;
     flex-flow: row nowrap;
-    flex: 1 1;
     text-align: center;
     align-items: baseline;
     justify-items: space-between;
@@ -114,6 +114,7 @@ nav li {
     padding: 0.5rem;
     background-color: #bbcbdb09;
     color: #022c4f;
+    margin: 0 5px;
 }
 .nav a {
     font-size: 1em;
